Fix tab style on Firefox

--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ nav {
     }
     nav li {
         display: inline;
-        padding: 2px .5em;
+        padding: 2px .5em 3px .5em;
         font-family: Verdana, sans-serif;
         color: #ccc;
         
